Get categories
add get api/events/categories
